# oh-my-HFTrainer

./: .gitignore  README.md  pyproject.toml  release.py
configs/accelerate/: ds_config.yaml  fsdp_config.yaml
configs/deepspeed/: zero2.json
scripts/: finetune_qwen3.sh  finetune_qwen3_deepspeed.sh  finetune_qwen3_fsdp.sh  hpo_qwen3_ddp.sh
src/: arguments.py  callbacks.py  finetune_qwen3.py  hpo_finetune_qwen3.py  hpo_optuna_driver_qwen3.py  hpo_trial_qwen3.py  wandb_utils.py
